agg products and about profile

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="blog.html">Tutoriales</a>
                               </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="about.html">Nosotros</a>
+                              </li>
                               
                            </ul>
                         </div>
@@ -88,7 +91,7 @@
                      <h1>Región de</h1>
                      <h1>EL CIBAO</h1>
                      <h2>República Dominicana</h2>
-                     <a href="#">Conoce más</a>
+                     <a href="products.html">Conoce más</a>
                   </div>
                </div>
             </div>
