--- a/blog.html
+++ b/blog.html
@@ -57,15 +57,18 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
-                              <li class="nav-item active">
+                              <li class="nav-item">
                                  <a class="nav-link" href="index.html"> Home  </a>
                               </li>
                               
                               <li class="nav-item">
-                                 <a class="nav-link" href="products.html">Consejos </a>
+                                 <a class="nav-link active" href="products.html">Consejos </a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="blog.html">Tutoriales</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="about.html">Nosotros</a>
                               </li>
                               
                            </ul>
